# QuditSynthesis

./: .gitignore  3ditmat.pkl  3pmap.pkl  5ditmat.pkl  README.md  animation.py  animation2.py  animation3.py  cliffords3.pkl  complex_verification.py  datastructures.py  generatecliffords.py  monomial.pkl  pyproject.toml  qu5it.py  qu5it_R.py  qu7it.py  qu7it_R.py  qubit.py  qutrit.py  stab_rank_experiment.py  synthesis5.ipynb  synthesis7.ipynb  universal.jl
notebooks/: synthesis5.ipynb  synthesis7.ipynb
src/: generatecliffords.py
src/quditsynthesis/: animation.py  animation2.py  datastructures.py
src/subroutines/: generatecliffords.py
tests/other_tests/: stab_rank_experiment.py
tests/qu5it_tests/: qu5it.py  qu5it_R.py
tests/qubit_tests/: qubit.py
tests/qudit_tests/: qu7it_R.py
tests/qutrit_tests/: 3ditmat.pkl  qutrit.py
